--- a/pages/members.html
+++ b/pages/members.html
@@ -10,18 +10,21 @@
           <img src="assets/images/ak-akbar.jpeg" alt="KA Akbar headshot" />
           <div class="member-content">
             <p class="member-name">Professor KA Akbar</p>
-            <p class="member-role">Assistant Professor, Lab Lead</p>
+            <p class="member-role">Assistant Professor</p>
             <p class="member-affil">Towson University</p>
             <p class="member-bio">
               Leads research at the intersection of usable security, AI/ML, and sustainable computing.
               Focused on building practical, human-centered defenses for intelligent systems.
             </p>
             <div class="member-links">
-              <a class="scholar" href="#" aria-label="Google Scholar">
+              <a class="site" href="https://khandakar-ashrafi-akbar.github.io/about-me/?" aria-label="Site">
+                <img src="assets/images/website.png" alt="Site" />
+              </a>
+              <a class="scholar" href="https://scholar.google.com/citations?user=lPz7L8kAAAAJ&hl=en" aria-label="Google Scholar">
                 <img src="assets/images/scholar.png" alt="Google Scholar" />
               </a>
-              <a class="github" href="#" aria-label="GitHub"><i class="fa fa-github"></i></a>
-              <a class="linkedin" href="#" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
+              <a class="github" href="https://khandakar-ashrafi-akbar.github.io/about-me/" aria-label="GitHub"><i class="fa fa-github"></i></a>
+              <a class="linkedin" href="https://www.linkedin.com/in/khandakar-ashrafi-akbar/" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
         </div>
