--- a/pages/news.html
+++ b/pages/news.html
@@ -17,9 +17,14 @@
             </div>
             <span class="news-badge is-hiring">Open Position</span>
           </div>
-          <h3 class="news-title">Open Positions: Graduate &amp; Undergraduate Researchers</h3>
+          <h3 class="news-title">
+            Open Positions: Hiring students for Spring 2026!
+          </h3>
           <p class="news-summary">
-            Join projects in AGI-driven security, patch recommendation, and green computing.
+            Hiring students for Fall 2025 and Spring 2026! If you are passionate
+            about research, eager to explore impactful ideas, and committed to
+            producing high-quality work, I would love to connect. Please feel
+            free to reach out to me via email at kakbar@towson.edu.
           </p>
           <a class="news-button" href="#">See more</a>
         </div>
@@ -28,7 +33,10 @@
       <!-- Example: Publication post -->
       <article class="news-item">
         <a class="news-media" href="#" aria-label="Paper accepted details">
-          <img src="assets/images/orange-slice.png" alt="Paper accepted illustration" />
+          <img
+            src="assets/images/orange-slice.png"
+            alt="Paper accepted illustration"
+          />
         </a>
         <div class="news-body">
           <div class="news-meta">
@@ -39,9 +47,12 @@
             </div>
             <span class="news-badge is-publication">Publication</span>
           </div>
-          <h3 class="news-title">Paper Accepted: Secure and Usable Defenses for Generative Systems</h3>
+          <h3 class="news-title">
+            Paper Accepted: Secure and Usable Defenses for Generative Systems
+          </h3>
           <p class="news-summary">
-            Our latest paper has been accepted to a top-tier venue. Read the abstract and access artifacts.
+            Our latest paper has been accepted to a top-tier venue. Read the
+            abstract and access artifacts.
           </p>
           <a class="news-button" href="#">See more</a>
         </div>
@@ -61,14 +72,16 @@
             </div>
             <span class="news-badge is-event">Event</span>
           </div>
-          <h3 class="news-title">Seminar: Usable Privacy for Intelligent Systems</h3>
+          <h3 class="news-title">
+            Seminar: Usable Privacy for Intelligent Systems
+          </h3>
           <p class="news-summary">
-            Join our seminar exploring human-centered methods for securing AI-enabled platforms.
+            Join our seminar exploring human-centered methods for securing
+            AI-enabled platforms.
           </p>
           <a class="news-button" href="#">See more</a>
         </div>
       </article>
-
     </div>
   </div>
 </section>
