--- a/pages/publications.html
+++ b/pages/publications.html
@@ -7,25 +7,53 @@
       <h3 class="pub-year-title">2025</h3>
       <div class="pub-grid">
         <article class="pub-item">
-          <div class="pub-venue">IEEE S&amp;P 2025</div>
-          <h4 class="pub-title">Secure and Usable Defenses for Generative Systems</h4>
-          <p class="pub-authors">K. A. Akbar, T. U. Islam, and Collaborators</p>
+          <div class="pub-venue">
+            Proceedings of the 2025 ACM International Workshop on Security and
+            Privacy Analytics
+          </div>
+          <h4 class="pub-title">
+            Enhancing Security Insights with KnowGen-RAG: Combining Knowledge
+            Graphs, LLMs, and Multimodal Interpretability
+          </h4>
+          <p class="pub-authors">
+            Arnav Nishith Sharma, Khandakar Ashrafi Akbar, Bhavani
+            Thuraisingham, Latifur Khan
+          </p>
           <div class="pub-links">
-            <a class="pub-badge" href="#" aria-label="PDF">PDF</a>
-            <a class="pub-badge" href="#" aria-label="Project page">Project</a>
-            <a class="pub-badge" href="#" aria-label="Code repository">Code</a>
-            <a class="pub-badge alt" href="#" aria-label="BibTeX">BibTeX</a>
+            <a
+              class="pub-badge"
+              href="https://dl.acm.org/doi/pdf/10.1145/3716815.3729012?download=true"
+              aria-label="PDF"
+              >PDF</a
+            >
+            <a
+              class="pub-badge"
+              href="https://khandakar-ashrafi-akbar.github.io/about-me/publication/iwspa/"
+              aria-label="Project page"
+              >Project</a
+            >
+            <!-- <a class="pub-badge" href="#" aria-label="Code repository">Code</a> -->
+            <!-- <a class="pub-badge alt" href="#" aria-label="BibTeX">BibTeX</a> -->
           </div>
         </article>
 
         <article class="pub-item">
-          <div class="pub-venue">USENIX Security 2025</div>
-          <h4 class="pub-title">Automated Patch Recommendation with LLM Feedback</h4>
-          <p class="pub-authors">T. U. Islam, K. A. Akbar, and Team</p>
+          <div class="pub-venue">
+            International Conference on Artificial Intelligence, Computer, Data
+            Sciences and Applications
+          </div>
+          <h4 class="pub-title">
+            Streamlining Research Complexities for AI Agents: Charting Pathways
+            to Innovative Idea Generation
+          </h4>
+          <p class="pub-authors">
+            Jinghui Guo, Khandakar Ashrafi Akbar, Latifur Khan, Bhavani
+            Thuraisingham, Saquib Irtiza
+          </p>
           <div class="pub-links">
-            <a class="pub-badge" href="#">PDF</a>
-            <a class="pub-badge" href="#">Slides</a>
-            <a class="pub-badge" href="#">Code</a>
+            <a class="pub-badge" href="">PDF</a>
+            <a class="pub-badge" href="">Slides</a>
+            <a class="pub-badge" href="">Code</a>
           </div>
         </article>
       </div>
@@ -36,17 +64,22 @@
       <h3 class="pub-year-title">2024</h3>
       <div class="pub-grid">
         <article class="pub-item">
-          <div class="pub-venue">ACSAC 2024</div>
-          <h4 class="pub-title">Usable Privacy for Intelligent Systems</h4>
-          <p class="pub-authors">A. Researcher, B. Collaborator, K. A. Akbar</p>
+          <div class="pub-venue">In TRB Annual Meeting 2025, National Academics</div>
+          <h4 class="pub-title">
+            Data Security & Privacy Regulation in the U.S.: A 50-State
+            Legislative Survey
+          </h4>
+          <p class="pub-authors">
+            Trayce Hockstad, Mizanur Rahman, Mashrur Chowdhury, Khandakar
+            Ashrafi Akbar, Md Nahiyan Uddin, Latifur Khan
+          </p>
           <div class="pub-links">
             <a class="pub-badge" href="#">PDF</a>
-            <a class="pub-badge" href="#">Talk</a>
-            <a class="pub-badge alt" href="#">BibTeX</a>
+            <!-- <a class="pub-badge" href="#">Talk</a>
+            <a class="pub-badge alt" href="#">BibTeX</a> -->
           </div>
         </article>
       </div>
     </div>
-
   </div>
 </section>
