--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="include-members"></div>
     <div id="include-projects"></div>
     <div id="include-contact"></div>
-    <div id="include-footer"></div>
+    <!-- <div id="include-footer"></div> -->
     <script src="js/main.js"></script>
   </body>
 </html>
