--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,7 +34,7 @@
       <div class="contact-meta">
         <div class="contact-line">
           <i class="fa fa-envelope"></i>
-          <a class="contact-mail" href="mailto:leader@towson.edu">leader@towson.edu</a>
+          <a class="contact-mail" href="mailto:kakbar@towson.edu">kakbar@towson.edu</a>
         </div>
         <div class="contact-line">
           <i class="fa fa-university"></i>
