--- a/pages/members.html
+++ b/pages/members.html
@@ -4,7 +4,7 @@
 
     <!-- Faculty / Lead -->
     <div class="members-group reveal">
-      <h3 class="members-group-title">Faculty</h3>
+      <h3 class="members-group-title">Lead</h3>
       <div class="members-grid-container">
         <div class="grid-item">
           <img src="assets/images/ak-akbar.jpeg" alt="KA Akbar headshot" />
