--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,45 +4,125 @@
 
     <!-- Current Projects -->
     <div class="project-group reveal">
-      <h3 class="project-group-title">Current</h3>
+      <!-- <h3 class="project-group-title">Current</h3> -->
       <div class="projects-grid">
         <article class="project-item">
           <div class="project-head">
-            <span class="proj-badge is-current">Current</span>
-            <span class="proj-area">AI Security</span>
+            <!-- <span class="proj-badge is-current">Current</span> -->
+            <span class="proj-area">Artificial Intelligence</span>
           </div>
-          <h4 class="project-title">Secure and Usable Defenses for Generative Systems</h4>
+          <h4 class="project-title">AI-Agent Project</h4>
           <p class="project-summary">
-            Building robust, human-centered safeguards for LLM- and diffusion-based systems
-            with a focus on usability, robustness, and environmental impact.
+            An AI-driven system that autonomously analyzes data, makes decisions, and interacts with users or environments across
+            diverse domains.
           </p>
           <div class="project-links">
-            <a class="proj-link" href="#">Overview</a>
-            <a class="proj-link" href="#">Publications</a>
-            <a class="proj-link alt" href="#">Code</a>
+            <!-- <a class="proj-link" href="#">Overview</a>
+            <a class="proj-link" href="#">Publications</a> -->
+            <a class="proj-link alt" href="#">See more</a>
           </div>
         </article>
 
         <article class="project-item">
           <div class="project-head">
-            <span class="proj-badge is-current">Current</span>
-            <span class="proj-area">Program Analysis</span>
+            <!-- <span class="proj-badge is-current">Current</span> -->
+            <span class="proj-area">Usable Security</span>
           </div>
-          <h4 class="project-title">Automated Patch Recommendation with LLM Feedback</h4>
+          <h4 class="project-title">Usable Security Project</h4>
           <p class="project-summary">
-            Leveraging static analysis and LLM-in-the-loop feedback to generate and
-            validate source-level patches for security and reliability.
+            A research initiative focused on designing and evaluating security systems that are both effective and easy for people
+            to use in real-world settings.
           </p>
           <div class="project-links">
-            <a class="proj-link" href="#">Overview</a>
-            <a class="proj-link" href="#">Artifacts</a>
-            <a class="proj-link alt" href="#">Dataset</a>
+            <!-- <a class="proj-link" href="#">Overview</a>
+            <a class="proj-link" href="#">Artifacts</a> -->
+            <a class="proj-link alt" href="#">See more</a>
+          </div>
+        </article>
+
+        <article class="project-item">
+          <div class="project-head">
+            <!-- <span class="proj-badge is-current">Current</span> -->
+            <span class="proj-area">Usable Security</span>
+          </div>
+          <h4 class="project-title">Usable Security Project</h4>
+          <p class="project-summary">
+            A research initiative focused on designing and evaluating security systems that are both effective and easy for
+            people
+            to use in real-world settings.
+          </p>
+          <div class="project-links">
+            <!-- <a class="proj-link" href="#">Overview</a>
+                    <a class="proj-link" href="#">Artifacts</a> -->
+            <a class="proj-link alt" href="#">See more</a>
+          </div>
+        </article>
+
+        <article class="project-item">
+          <div class="project-head">
+            <!-- <span class="proj-badge is-current">Current</span> -->
+            <span class="proj-area">LLM</span>
+          </div>
+          <h4 class="project-title">Verification of LLM Responses</h4>
+          <p class="project-summary">
+            A project exploring methods to assess, validate, and improve the accuracy and reliability of large language model
+            outputs.
+          </p>
+          <div class="project-links">
+            <!-- <a class="proj-link" href="#">Overview</a>
+                    <a class="proj-link" href="#">Artifacts</a> -->
+            <a class="proj-link alt" href="#">See more</a>
+          </div>
+        </article>
+
+        <article class="project-item">
+          <div class="project-head">
+            <!-- <span class="proj-badge is-current">Current</span> -->
+            <span class="proj-area">Security</span>
+          </div>
+          <h4 class="project-title">Restructuring Security Tasks</h4>
+          <p class="project-summary">
+            A project aimed at redesigning and simplifying security workflows to enhance efficiency, usability, and effectiveness.
+          </p>
+          <div class="project-links">
+            <!-- <a class="proj-link" href="#">Overview</a>
+                    <a class="proj-link" href="#">Artifacts</a> -->
+            <a class="proj-link alt" href="#">See more</a>
+          </div>
+        </article>
+
+        <article class="project-item">
+          <div class="project-head">
+            <!-- <span class="proj-badge is-current">Current</span> -->
+            <span class="proj-area">LLM</span>
+          </div>
+          <h4 class="project-title">Analyzing LLM Behavior</h4>
+          <p class="project-summary">
+            A project studying how large language models generate, adapt, and respond to different tasks and inputs.          </p>
+          <div class="project-links">
+            <!-- <a class="proj-link" href="#">Overview</a>
+                    <a class="proj-link" href="#">Artifacts</a> -->
+            <a class="proj-link alt" href="#">See more</a>
+          </div>
+        </article>
+
+        <article class="project-item">
+          <div class="project-head">
+            <!-- <span class="proj-badge is-current">Current</span> -->
+            <span class="proj-area">Misc</span>
+          </div>
+          <h4 class="project-title">Misc</h4>
+          <p class="project-summary">
+            TBD
+          <div class="project-links">
+            <!-- <a class="proj-link" href="#">Overview</a>
+                    <a class="proj-link" href="#">Artifacts</a> -->
+            <a class="proj-link alt" href="#">See more</a>
           </div>
         </article>
       </div>
     </div>
-
-    <!-- Ongoing Projects -->
+    <!-- Ongoing Projects
     <div class="project-group reveal">
       <h3 class="project-group-title">Ongoing</h3>
       <div class="projects-grid">
@@ -76,7 +156,7 @@
           </div>
         </article>
       </div>
-    </div>
+    </div> -->
 
   </div>
 </section>
