add research interns

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,12 +9,12 @@
         contact our members to apply for internships and research positions.
       </p>
       <p class="contact-note">
-        Unauthorized visitors are not permitted in the lab office.
+        Unauthorized visitors are not permitted in the lab.
       </p>
 
       <div class="contact-line">
         <i class="fa fa-map-marker"></i>
-        <span>Room 123, Science Complex, Towson University</span>
+        <span>7800 York Rd, Towson, MD 21204, Office Room: YR 433</span>
       </div>
       <div class="contact-line">
         <i class="fa fa-clock-o"></i>
@@ -38,7 +38,7 @@
         </div>
         <div class="contact-line">
           <i class="fa fa-university"></i>
-          <a class="contact-mail" href="#" target="_blank" rel="noopener">Towson University — Contact</a>
+          <a class="contact-mail" href="https://www.towson.edu/" target="_blank" rel="noopener">Towson University — Contact</a>
         </div>
       </div>
     </div>
