--- a/pages/members.html
+++ b/pages/members.html
@@ -9,7 +9,7 @@
         <div class="grid-item">
           <img src="assets/images/ak-akbar.jpeg" alt="KA Akbar headshot" />
           <div class="member-content">
-            <p class="member-name">Professor KA Akbar</p>
+            <p class="member-name">Khandakar Ashrafi Akbar</p>
             <p class="member-role">Assistant Professor</p>
             <p class="member-affil">Towson University</p>
             <p class="member-bio">
@@ -23,7 +23,7 @@
               <a class="scholar" href="https://scholar.google.com/citations?user=lPz7L8kAAAAJ&hl=en" aria-label="Google Scholar">
                 <img src="assets/images/scholar.png" alt="Google Scholar" />
               </a>
-              <a class="github" href="https://khandakar-ashrafi-akbar.github.io/about-me/" aria-label="GitHub"><i class="fa fa-github"></i></a>
+              <a class="github" href="https://github.com/ashrafishama" aria-label="GitHub"><i class="fa fa-github"></i></a>
               <a class="linkedin" href="https://www.linkedin.com/in/khandakar-ashrafi-akbar/" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
@@ -31,9 +31,9 @@
       </div>
     </div>
 
-    <!-- PhD Candidates -->
+    <!-- Volunteer Researcher -->
     <div class="members-group reveal">
-      <h3 class="members-group-title">PhD Candidates</h3>
+      <h3 class="members-group-title">Volunteer Researcher</h3>
       <div class="members-grid-container">
         <div class="grid-item">
           <img src="assets/images/profile_male.png" alt="Mr. A headshot" />
@@ -57,7 +57,7 @@
       </div>
     </div>
 
-    <!-- GRA / GTA -->
+    <!-- GRA / GTA
     <div class="members-group reveal">
       <h3 class="members-group-title">GRA / GTA</h3>
       <div class="members-grid-container">
@@ -99,45 +99,51 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Research Interns -->
     <div class="members-group reveal">
       <h3 class="members-group-title">Research Interns</h3>
       <div class="members-grid-container">
         <div class="grid-item">
-          <img src="assets/images/profile_female.png" alt="Mr. D headshot" />
+          <img src="assets/images/saad.jpeg" alt="Saad Mohammad Rafid" />
           <div class="member-content">
-            <p class="member-name">Mr. D</p>
+            <p class="member-name">Saad Mohammad Rafid Pial</p>
             <p class="member-role">Research Intern</p>
             <p class="member-affil">Lucid Lab</p>
             <p class="member-bio">
-              Prototyping lightweight interfaces for safe model interaction and prompt governance.
+              Working on using LLMs to generalize logs from different sources.
             </p>
             <div class="member-links">
-              <a class="scholar" href="#" aria-label="Google Scholar">
-                <img src="assets/images/scholar.png" alt="Google Scholar" />
+              <a class="site" href="https://saadmrp1038.github.io/" aria-label="Site">
+                <img src="assets/images/website.png" alt="Site" />
               </a>
-              <a class="github" href="#" aria-label="GitHub"><i class="fa fa-github"></i></a>
-              <a class="linkedin" href="#" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
+              <!-- <a class="scholar" href="#" aria-label="Google Scholar">
+                <img src="assets/images/scholar.png" alt="Google Scholar" />
+              </a> -->
+              <a class="github" href="https://github.com/Saadmrp1038" aria-label="GitHub"><i class="fa fa-github"></i></a>
+              <a class="linkedin" href="https://www.linkedin.com/in/saadmrp/" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
         </div>
         <div class="grid-item">
-          <img src="assets/images/profile_male.png" alt="Mr. E headshot" />
+          <img src="assets/images/jaid.jpg" alt="Jaid Monwar Chowdhury" />
           <div class="member-content">
-            <p class="member-name">Mr. E</p>
+            <p class="member-name">Jaid Monwar Chowdhury</p>
             <p class="member-role">Research Intern</p>
             <p class="member-affil">Lucid Lab</p>
             <p class="member-bio">
-              Exploring energy-aware inference strategies and measurement for green AI.
+              He is working on leveraging LLMs to generalize logs from various sources.
             </p>
             <div class="member-links">
-              <a class="scholar" href="#" aria-label="Google Scholar">
-                <img src="assets/images/scholar.png" alt="Google Scholar" />
+               <a class="site" href="https://jaid-monwar.github.io/" aria-label="Site">
+                <img src="assets/images/website.png" alt="Site" />
               </a>
-              <a class="github" href="#" aria-label="GitHub"><i class="fa fa-github"></i></a>
-              <a class="linkedin" href="#" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
+              <!-- <a class="scholar" href="#" aria-label="Google Scholar">
+                <img src="assets/images/scholar.png" alt="Google Scholar" />
+              </a> -->
+              <a class="github" href="https://github.com/jaid-monwar" aria-label="GitHub"><i class="fa fa-github"></i></a>
+              <a class="linkedin" href="https://www.linkedin.com/in/jaid-monwar/" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
         </div>
