--- a/pages/news.html
+++ b/pages/news.html
@@ -10,7 +10,7 @@
         </a>
         <div class="news-body">
           <div class="news-meta">
-            <div class="news-date" aria-label="Published on September 15, 2025">
+            <div class="news-date hiring" aria-label="Published on September 15, 2025">
               <span class="day">15</span>
               <span class="month">Sep</span>
               <span class="year">2025</span>
@@ -30,6 +30,30 @@
         </div>
       </article>
 
+      <!-- Example: Event post -->
+      <article class="news-item">
+        <a class="news-media" href="#" aria-label="Seminar talk details">
+          <img src="assets/images/backdrop.png" alt="Seminar talk banner" />
+        </a>
+        <div class="news-body">
+          <div class="news-meta">
+            <div class="news-date" aria-label="Published on July 10, 2025">
+              <span class="day">6</span>
+              <span class="month">June</span>
+              <span class="year">2025</span>
+            </div>
+            <span class="news-badge is-event">Seminar</span>
+          </div>
+          <h3 class="news-title">
+            SaT-CPS '25: Proceedings of the 2025 ACM Workshop on Secure and Trustworthy Cyber-physical Systems
+          </h3>
+          <p class="news-summary">
+            Khandakar Ashrafi Akbar was the Co-Keynote Speaker, 11th ACM International Workshop on Security and Privacy Analytics (IWSPA 2025)
+          </p>
+          <a class="news-button" href="https://www.codaspy.org/2025/satcps-toc.html">See more</a>
+        </div>
+      </article>
+
       <!-- Example: Publication post -->
       <article class="news-item">
         <a class="news-media" href="#" aria-label="Paper accepted details">
@@ -41,47 +65,23 @@
         <div class="news-body">
           <div class="news-meta">
             <div class="news-date" aria-label="Published on August 30, 2025">
-              <span class="day">30</span>
-              <span class="month">Aug</span>
+              <span class="day">3</span>
+              <span class="month">April</span>
               <span class="year">2025</span>
             </div>
-            <span class="news-badge is-publication">Publication</span>
+            <span class="news-badge is-publication">Achievement</span>
           </div>
           <h3 class="news-title">
-            Paper Accepted: Secure and Usable Defenses for Generative Systems
+            Launching Our Lab with Dr. Khandakar Ashrafi Akbar
           </h3>
           <p class="news-summary">
-            Our latest paper has been accepted to a top-tier venue. Read the
-            abstract and access artifacts.
-          </p>
-          <a class="news-button" href="#">See more</a>
+            We are delighted to announce that Dr. Khandakar Ashrafi Akbar will be joining Towson University as an Assistant
+            Professor starting Fall 2025. With her appointment, our new lab will be established, focusing on exciting research
+            directions and creating opportunities for collaboration, innovation, and student involvement. </p>
+          <!-- <a class="news-button" href="#">See more</a> -->
         </div>
       </article>
 
-      <!-- Example: Event post -->
-      <article class="news-item">
-        <a class="news-media" href="#" aria-label="Seminar talk details">
-          <img src="assets/images/backdrop.png" alt="Seminar talk banner" />
-        </a>
-        <div class="news-body">
-          <div class="news-meta">
-            <div class="news-date" aria-label="Published on July 10, 2025">
-              <span class="day">10</span>
-              <span class="month">Jul</span>
-              <span class="year">2025</span>
-            </div>
-            <span class="news-badge is-event">Event</span>
-          </div>
-          <h3 class="news-title">
-            Seminar: Usable Privacy for Intelligent Systems
-          </h3>
-          <p class="news-summary">
-            Join our seminar exploring human-centered methods for securing
-            AI-enabled platforms.
-          </p>
-          <a class="news-button" href="#">See more</a>
-        </div>
-      </article>
     </div>
   </div>
 </section>
