--- a/pages/members.html
+++ b/pages/members.html
@@ -16,6 +16,23 @@
               Leads research at the intersection of usable security, AI/ML, and sustainable computing.
               Focused on building practical, human-centered defenses for intelligent systems.
             </p>
+            <button class="member-toggle" aria-expanded="false" aria-controls="member-akbar-extra">More</button>
+            <div id="member-akbar-extra" class="member-extra" aria-hidden="true">
+              <h4>Affiliations & Memberships</h4>
+              <ul class="member-list">
+                <li> IEEE Member </li> 
+                <li> Member of Women in Cybersecurity (WiCyS) </li> 
+                <li> Member of Women in Data Science (WiDS) </li>
+                <li> Member of the Transportation Research Board </li>
+              </ul>
+              <h4>Expertise</h4>
+              <ul class="member-tags">
+                <li>Cloud DevOps</li>
+                <li>Data Mining</li>
+                <li>Context Awareness</li>
+                <li>Intelligent System Optimization</li>
+              </ul>
+            </div>
             <div class="member-links">
               <a class="site" href="https://khandakar-ashrafi-akbar.github.io/about-me/?" aria-label="Site">
                 <img src="assets/images/website.png" alt="Site" />
@@ -45,6 +62,19 @@
               Works on program analysis and LLM-in-the-loop patch generation with a focus on
               secure-by-default developer tooling.
             </p>
+            <button class="member-toggle" aria-expanded="false" aria-controls="member-a-extra">More</button>
+            <div id="member-a-extra" class="member-extra" aria-hidden="true">
+              <h4>Affiliations & Memberships</h4>
+              <ul class="member-list">
+                <li>TBD</li>
+              </ul>
+              <h4>Expertise</h4>
+              <ul class="member-tags">
+                <li>Program Analysis</li>
+                <li>LLM-assisted Repair</li>
+                <li>Developer Tooling</li>
+              </ul>
+            </div>
             <div class="member-links">
               <a class="scholar" href="#" aria-label="Google Scholar">
                 <img src="assets/images/scholar.png" alt="Google Scholar" />
@@ -114,6 +144,20 @@
             <p class="member-bio">
               Working on using LLMs to generalize logs from different sources.
             </p>
+            <button class="member-toggle" aria-expanded="false" aria-controls="member-saad-extra">More</button>
+            <div id="member-saad-extra" class="member-extra" aria-hidden="true">
+              <h4>Affiliations & Memberships</h4>
+              <ul class="member-list">
+                <li>Research Intern at xlab, University of Illinois Urbana-Champaign.</li>
+                <li>Software Engineer at Monsha.AI.</li>
+              </ul>
+              <h4>Expertise</h4>
+              <ul class="member-tags">
+                <li>LLMs</li>
+                <li>Log Generalization</li>
+                <li>Data Engineering</li>
+              </ul>
+            </div>
             <div class="member-links">
               <a class="site" href="https://saadmrp1038.github.io/" aria-label="Site">
                 <img src="assets/images/website.png" alt="Site" />
@@ -135,6 +179,20 @@
             <p class="member-bio">
               He is working on leveraging LLMs to generalize logs from various sources.
             </p>
+            <button class="member-toggle" aria-expanded="false" aria-controls="member-jaid-extra">More</button>
+            <div id="member-jaid-extra" class="member-extra" aria-hidden="true">
+              <h4>Affiliations & Memberships</h4>
+              <ul class="member-list">
+                <li>Research Intern at xlab, University of Illinois Urbana-Champaign.</li>
+                <li>Software Engineer at Yobo AI.</li>
+              </ul>
+              <h4>Expertise</h4>
+              <ul class="member-tags">
+                <li>LLMs</li>
+                <li>Log Generalization</li>
+                <li>Software Engineering</li>
+              </ul>
+            </div>
             <div class="member-links">
                <a class="site" href="https://jaid-monwar.github.io/" aria-label="Site">
                 <img src="assets/images/website.png" alt="Site" />
