update home description

--- a/pages/home.html
+++ b/pages/home.html
@@ -22,14 +22,39 @@
   <div class="home-description">
     <h1>Introduction</h1>
     <p>
-      Lucid Lab, led by Professor Khandakar Ashrafi Akbar, explores how
-      artificial general intelligence (AGI), machine learning, and generative AI
-      can transform security and privacy. Our research develops usable,
-      scalable, and sustainable defenses—from automated patch recommendation
-      systems to system-level protections—guided by the vision of “Accessible by
-      All Security.” We focus on bridging cutting-edge AI with real-world
-      impact, ensuring that intelligent technologies remain secure, inclusive,
-      and environmentally responsible.
+      LUCID Lab (Learning and Usability for Cybersecurity and Intelligent Decisions), led by Dr. Khandakar Ashrafi
+      Akbar,
+      investigates how artificial general intelligence (AGI), machine learning, and generative AI can transform the
+      landscape
+      of security, privacy, and intelligent decision-making. Guided by the vision of “Accessible by All Security”, our
+      mission
+      is to design defenses that are not only usable, scalable, and sustainable, but also meaningful for real-world
+      adoption.
+    </p>
+    <br>
+    <p>
+      Our research spans a diverse set of areas, including:
+      <ul style="list-style-type:square;">
+        <li> Human-Centered and Usable Security – ensuring systems are secure while remaining intuitive and inclusive for all
+          users.
+        </li>
+        <li>
+          Exploration of Nuanced Factors in Generative AI Systems – uncovering hidden biases, risks, and opportunities
+          within advanced AI models.
+        </li>
+        <li>
+          Development of Context-Aware Intelligent Systems – building adaptive technologies that make secure, informed
+          decisions in dynamic environments.
+        </li>
+        <li>
+          Design of Resilient and Interpretable Evaluation Metrics – creating transparent methods to measure the
+          robustness and fairness of intelligent systems.
+        </li>
+        <li>
+          Performance Evaluation and Analysis of Generative AI Models – advancing rigorous frameworks for testing and
+          optimizing next-generation AI.
+        </li>
+      </ul>
     </p>
   </div>
 </section>
